Most todos done.